<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/counter_text_color"
    android:padding="15dp" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

       <EditText
           android:id="@+id/signup_editText_firstName"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/rounded_edittext"
           android:ems="10"
           android:hint="@string/signup_editText_firstName_hint"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:singleLine="true" />

       <EditText
           android:id="@+id/signup_editText_lastName"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/rounded_edittext"
           android:ems="10"
           android:hint="@string/signup_editText_lastName"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:singleLine="true" />

       <EditText
           android:id="@+id/signup_editText_email"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/rounded_edittext"
           android:ems="10"
           android:hint="@string/signup_editText_email_hint"
           android:inputType="text"
           android:paddingLeft="5dp"
           android:singleLine="true" />

        <EditText
            android:id="@+id/signup_editText_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/signup_editText_password_hint"
            android:paddingLeft="5dp"
            android:password="true"
            android:singleLine="true" />
        
        <EditText
            android:id="@+id/signup_editText_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/signup_editText_confirm_password_hint"
            android:paddingLeft="5dp"
            android:password="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/signup_button_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ab_bottom_solid_style"
            android:text="@string/signup_button_singup"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/signup_button_signUpLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ab_solid_style"
            android:text="@string/signup_button_return_login"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>