<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/counter_text_color"
    android:padding="15dp"
    tools:context="com.android.utilist.LogInActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_editText_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/login_editText_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/login_editText_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/login_editText_password_hint"
            android:paddingLeft="5dp"
            android:password="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ab_bottom_solid_style"
            android:text="@string/login_button_login"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/login_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ab_solid_style"
            android:text="@string/login_button_signup"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

</RelativeLayout>