<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/counter_text_color"
    android:textAlignment="center"
    tools:context=".EditTodoListItemActivity" >

    <LinearLayout
        android:id="@+id/todo_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/todo_item_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/ab_solid_style"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/todo_item_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ab_solid_style"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todo_linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ab_bottom_solid_style"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/todo_imageViewDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_delete" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/todo_RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/todo_linearLayout1"
        android:layout_margin="10dp"
        android:background="@color/white_color"
        android:gravity="clip_horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/todo_editTextItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:ems="10"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/todo_editTextItemName"
            android:layout_below="@+id/todo_editTextItemName"
            android:layout_marginLeft="16dp"
            android:paddingTop="5dp"
            android:text="@string/reminder_lable"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView01"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/todo_date_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date" />

            <EditText
                android:id="@+id/todo_editText_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="time" />

            <ImageView
                android:id="@+id/todo_imageView_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:src="@drawable/ic_action_cancel"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/todo_RelativeLayout1"
        android:layout_margin="10dp"
        android:background="@color/white_color"
        android:padding="5dp" >

        <EditText
            android:id="@+id/todo_editTextItemNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/todo_textViewNotesLabel"
            android:ems="10"
            android:hint="@string/notesHint"
            android:background="@drawable/apptheme_edit_text_holo_light" />

        <TextView
            android:id="@+id/todo_textViewNotesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/notesLabel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</RelativeLayout>