<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/counter_text_color"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/white_color"
        android:orientation="horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/editText_add_item"
            android:layout_width="174dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/add_item_hint" >
        </EditText>

        <ImageView
            android:id="@+id/imageViewLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_clock"
            android:tag="R.drawable.ic_clock" />

        <ImageView
            android:id="@+id/imageViewMiddle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_barcode"
            android:tag="R.drawable.ic_barcode" />

        <ImageView
            android:id="@+id/imageViewRight"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_mic"
            android:tag="R.drawable.ic_mic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/white_color"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textViewDisplayRemaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remainingLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDisplayTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/totalLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_price"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/linearLayout10"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_color"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list_item_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

    </LinearLayout>

</RelativeLayout>